--- a/anuncio.html
+++ b/anuncio.html
@@ -35,11 +35,20 @@
     <main class="contenedor seccion contenido-centrado">
         <h1>Casa en Venta frente al bosque</h1>
 
-        <picture>
-            <source srcset="build/img/destacada.webp" type="image/webp">
-            <source srcset="build/img/destacada.jpg" type="image/jpeg">
-            <img loading="lazy" src="build/img/destacada.jpg" alt="imagen de la propiedad">
-        </picture>
+        <!--Galeria-->
+        <div class="containerg">
+            <div class="img_container">
+                <img src="Img1.png" alt="" class="main_img">
+            </div>
+    
+            <div class="thumbnail_container">
+                <img class="thumbnail active" src="build/img/Img1.png" alt="">
+                <img class="thumbnail" src="build/img/Img2.png" alt="">
+                <img class="thumbnail" src="build/img/Img3.png" alt="">
+                <img class="thumbnail" src="build/img/Img4.png" alt="">
+            </div>
+        </div>
+        <br>
 
         <div class="resumen-propiedad">
             <p class="precio">$3,000,000</p>
