--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="/">
+                <a href="index.html">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
@@ -106,7 +106,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa terminados de lujo</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">$6,0000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -139,7 +139,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">$9,0000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -191,7 +191,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Terraza en el techo de tu casa</h4>
-                        <p class="informacion-meta">Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+                        <p class="informacion-meta">Escrito el: <span>20/10/2023</span> por: <span>Admin</span> </p>
 
                         <p>
                             Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
@@ -212,7 +212,7 @@
                 <div class="texto-entrada">
                     <a href="entrada.html">
                         <h4>Guía para la decoración de tu hogar</h4>
-                        <p class="informacion-meta">Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+                        <p class="informacion-meta">Escrito el: <span>15/09/2023</span> por: <span>Admin</span> </p>
 
                         <p>
                             Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
@@ -244,7 +244,7 @@
             </nav>
         </div>
 
-        <p class="copyright">Todos los derechos Reservados 2021 &copy;</p>
+        <p class="copyright">Todos los derechos Reservados 2023 &copy;</p>
     </footer>
 
     <script src="build/js/bundle.min.js"></script>
