--- a/base.html
+++ b/base.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="/">
+                <a href="index.html">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
@@ -47,7 +47,7 @@
             </nav>
         </div>
 
-        <p class="copyright">Todos los derechos Reservados 2021 &copy;</p>
+        <p class="copyright">Todos los derechos Reservados 2023 &copy;</p>
     </footer>
 
     <script src="build/js/bundle.min.js"></script>
