--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="index.html">
+                <a href="/">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
@@ -36,28 +36,32 @@
     <main class="contenedor seccion">
         <h1>Contacto</h1>
 
-        
-        <!--formulario-->
+        <picture>
+            <source srcset="build/img/destacada3.webp" type="image/webp">
+            <source srcset="build/img/destacada3.jpg" type="image/jpeg">
+            <img loading="lazy" src="build/img/destacada3.jpg" alt="Imagen Contacto">
+        </picture>
+
         <h2>Llene el formulario de Contacto</h2>
 
-        <form class="formulario" action="src/database.php" method="post">
+        <form class="formulario">
             <fieldset>
                 <legend>Información Personal</legend>
 
                 <label for="nombre">Nombre</label>
-                <input type="text" placeholder="Tu Nombre" name="nombre" id="nombre">
+                <input type="text" placeholder="Tu Nombre" id="nombre">
 
                 <label for="email">E-mail</label>
-                <input type="email" placeholder="Tu Email" name="email" id="email">
+                <input type="email" placeholder="Tu Email" id="email">
 
                 <label for="telefono">Teléfono</label>
-                <input type="tel" placeholder="Tu Teléfono" name="telefono" id="telefono">
+                <input type="tel" placeholder="Tu Teléfono" id="telefono">
 
                 <label for="mensaje">Mensaje:</label>
-                <textarea id="mensaje" name="mensaje"></textarea>
+                <textarea id="mensaje"></textarea>
             </fieldset>
 
-            <!--<fieldset>
+            <fieldset>
                 <legend>Información sobre la propiedad</legend>
 
                 <label for="opciones">Vende o Compra:</label>
@@ -93,7 +97,7 @@
                 <label for="hora">Hora:</label>
                 <input type="time" id="hora" min="09:00" max="18:00">
 
-            </fieldset> -->
+            </fieldset>
 
             <input type="submit" value="Enviar" class="boton-verde">
         </form>
@@ -109,7 +113,7 @@
             </nav>
         </div>
 
-        <p class="copyright">Todos los derechos Reservados 2023 &copy;</p>
+        <p class="copyright">Todos los derechos Reservados 2021 &copy;</p>
     </footer>
 
     <script src="build/js/bundle.min.js"></script>
