--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="index.html">
+                <a href="/">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
@@ -47,11 +47,12 @@
 
             <div class="texto-nosotros">
                 <blockquote>
-                    10 Años de experiencia
+                    25 Años de experiencia
                 </blockquote>
 
-                <p>Durante un cuarto de siglo en el negocio de venta de casas, nuestra empresa ha acumulado una vasta experiencia en el mercado inmobiliario. Esta experiencia implica un conocimiento profundo de las tendencias del mercado, la evolución de las preferencias de los compradores y vendedores, así como la capacidad para adaptarse a los cambios en la economía y la industria inmobiliaria.</p>
+                <p>Proin consequat viverra sapien, malesuada tempor tortor feugiat vitae. In dictum felis et nunc aliquet molestie. Proin tristique commodo felis, sed auctor elit auctor pulvinar. Nunc porta, nibh quis convallis sollicitudin, arcu nisl semper mi, vitae sagittis lorem dolor non risus. Vivamus accumsan maximus est, eu mollis mi. Proin id nisl vel odio semper hendrerit. Nunc porta in justo finibus tempor. Suspendisse lobortis dolor quis elit suscipit molestie. Sed condimentum, erat at tempor finibus, urna nisi fermentum est, a dignissim nisi libero vel est. Donec et imperdiet augue. Curabitur malesuada sodales congue. Suspendisse potenti. Ut sit amet convallis nisi.</p>
 
+                <p>Aliquam lectus magna, luctus vel gravida nec, iaculis ut augue. Praesent ac enim lorem. Quisque ac dignissim sem, non condimentum orci. Morbi a iaculis neque, ac euismod felis. Fusce augue quam, fermentum sed turpis nec, hendrerit dapibus ante. Cras mattis laoreet nibh, quis tincidunt odio fermentum vel. Nulla facilisi.</p>
             </div>
         </div>
     </main>
@@ -63,17 +64,17 @@
             <div class="icono">
                 <img src="build/img/icono1.svg" alt="Icono seguridad" loading="lazy">
                 <h3>Seguridad</h3>
-                <p>Con mas de 10 años en el ramo de la venta de bienes raices y mas de 500 propiedades vendidas tenemos una trayectoria que nos respalda</p>
+                <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
             </div>
             <div class="icono">
                 <img src="build/img/icono2.svg" alt="Icono Precio" loading="lazy">
                 <h3>Precio</h3>
-                <p>Precios altamente competitivos en el mercado, nos adaptamos a tu presupuesto al igual que contamos con diversos medios de pago.</p>
+                <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
             </div>
             <div class="icono">
                 <img src="build/img/icono3.svg" alt="Icono Tiempo" loading="lazy">
                 <h3>A Tiempo</h3>
-                <p>Entregas en tiempos record, obten tu primera propiedad y disfrutala en el menor lapso posible.</p>
+                <p>Possimus, suscipit repudiandae. Autem deserunt aliquid deleniti sit minus consectetur obcaecati molestiae dolorem natus dolores reiciendis tempore, explicabo cum nobis laudantium. Voluptates?</p>
             </div>
         </div>
     </section>
@@ -88,7 +89,7 @@
             </nav>
         </div>
 
-        <p class="copyright">Todos los derechos Reservados 2023 &copy;</p>
+        <p class="copyright">Todos los derechos Reservados 2021 &copy;</p>
     </footer>
 
     <script src="build/js/bundle.min.js"></script>
