--- a/anuncio.html
+++ b/anuncio.html
@@ -50,6 +50,14 @@
             </div>
         </div>
         <br>
+        <div class="botton360">
+            <a href="#" class="vista360-btn">
+                <img src="build/img/icono_360button.png" alt="Icono 360°">
+                Abrir Vista 360°
+            </a>
+        </div>
+        <br>
+
 
         <div class="resumen-propiedad">
             <p class="precio">$4,500,000</p>
