--- a/anuncios.html
+++ b/anuncios.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="/">
+                <a href="index.html">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
@@ -81,7 +81,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa terminados de lujo</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">$6,0000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -114,7 +114,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">$9,0000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -147,7 +147,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">$12,0000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -180,7 +180,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">$15,0000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -213,7 +213,7 @@
                 <div class="contenido-anuncio">
                     <h3>Casa con alberca</h3>
                     <p>Casa en el lago con excelente vista, acabados de lujo a un excelente precio</p>
-                    <p class="precio">$3,0000,000</p>
+                    <p class="precio">$18,0000,000</p>
 
                     <ul class="iconos-caracteristicas">
                         <li>
@@ -249,7 +249,7 @@
             </nav>
         </div>
 
-        <p class="copyright">Todos los derechos Reservados 2021 &copy;</p>
+        <p class="copyright">Todos los derechos Reservados 2023 &copy;</p>
     </footer>
 
     <script src="build/js/bundle.min.js"></script>
