--- a/blog.html
+++ b/blog.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="contenedor contenido-header">
             <div class="barra">
-                <a href="/">
+                <a href="index.html">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
 
@@ -48,7 +48,7 @@
             <div class="texto-entrada">
                 <a href="entrada.html">
                     <h4>Terraza en el techo de tu casa</h4>
-                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+                    <p>Escrito el: <span>20/11/2023</span> por: <span>Admin</span> </p>
 
                     <p>
                         Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
@@ -69,7 +69,7 @@
             <div class="texto-entrada">
                 <a href="entrada.html">
                     <h4>Guía para la decoración de tu hogar</h4>
-                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+                    <p>Escrito el: <span>20/10/2023</span> por: <span>Admin</span> </p>
 
                     <p>
                         Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
@@ -90,7 +90,7 @@
             <div class="texto-entrada">
                 <a href="entrada.html">
                     <h4>Terraza en el techo de tu casa</h4>
-                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+                    <p>Escrito el: <span>15/10/2023</span> por: <span>Admin</span> </p>
 
                     <p>
                         Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
@@ -111,7 +111,7 @@
             <div class="texto-entrada">
                 <a href="entrada.html">
                     <h4>Guía para la decoración de tu hogar</h4>
-                    <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span> </p>
+                    <p>Escrito el: <span>20/09/2023</span> por: <span>Admin</span> </p>
 
                     <p>
                         Maximiza el espacio en tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
@@ -131,7 +131,7 @@
             </nav>
         </div>
 
-        <p class="copyright">Todos los derechos Reservados 2021 &copy;</p>
+        <p class="copyright">Todos los derechos Reservados 2023 &copy;</p>
     </footer>
 
     <script src="build/js/bundle.min.js"></script>
