--- a/entrada.html
+++ b/entrada.html
@@ -44,14 +44,12 @@
         </picture>
 
         <p class="informacion-meta">Escrito el: <span>20/10/2023</span> por: <span>Admin</span> </p>
-        <style>
-            .justificado {
-              text-align: justify;
-            }
-        </style>
-        <p  class="justificado">Al final, al explorar el fascinante mundo de las casas en venta, el tiempo se convierte en un elemento crucial para descubrir la residencia perfecta. En este emocionante escenario, las señales de búsqueda despliegan una caravana de propiedades que guardan ser descubiertas. Este proceso, guiado por un hábil agente de bienes raíces, se transforma en una experiencia conmovedora y reconfortante. Cada anuncio, similar a una almohada diseñada con esmero, lleva la firma única del creador, brindando comodidad y serenidad.</p>
-        <p  class="justificado">En el momento justo, las puertas se abren para revelar una diversidad de opciones que se adaptan a tus necesidades y deseos. Nos preocupamos por el bienestar del futuro propietario, y en esta emocionante búsqueda de hogar, la clave reside en encontrar una morada que se ajuste perfectamente a tu estilo de vida. Las finanzas y la publicidad desempeñan un papel esencial en este proceso, y nosotros estamos aquí, ansiosos de ser tus guías en esta búsqueda emocionante. Los teléfonos inteligentes se convierten en herramientas esenciales mientras exploras este vasto valle de oportunidades.</p>
-        <p  class="justificado">Desde espacios amplios ideales para familias en crecimiento hasta propiedades versátiles que se adaptan a diferentes situaciones, como el embarazo o cualquier otro cambio de vida, cada descripción de propiedad se entrelaza como un tejido único, destacando sus características distintivas. Estas casas no son simples refugios, sino inversiones significativas en tu futuro. Siendo el objetivo, se activa a través de la búsqueda y la decisión informada. Aunque el proceso pueda presentar desafíos, al final del día, descubrirás que cada elección es valiosa, similar a la levadura que da vida a un hogar único y acogedor.</p>
+
+
+        <div class="resumen-propiedad">
+            <p>Proin consequat viverra sapien, malesuada tempor tortor feugiat vitae. In dictum felis et nunc aliquet molestie. Proin tristique commodo felis, sed auctor elit auctor pulvinar. Nunc porta, nibh quis convallis sollicitudin, arcu nisl semper mi, vitae sagittis lorem dolor non risus. Vivamus accumsan maximus est, eu mollis mi. Proin id nisl vel odio semper hendrerit. Nunc porta in justo finibus tempor. Suspendisse lobortis dolor quis elit suscipit molestie. Sed condimentum, erat at tempor finibus, urna nisi fermentum est, a dignissim nisi libero vel est. Donec et imperdiet augue. Curabitur malesuada sodales congue. Suspendisse potenti. Ut sit amet convallis nisi.</p>
+
+            <p>Aliquam lectus magna, luctus vel gravida nec, iaculis ut augue. Praesent ac enim lorem. Quisque ac dignissim sem, non condimentum orci. Morbi a iaculis neque, ac euismod felis. Fusce augue quam, fermentum sed turpis nec, hendrerit dapibus ante. Cras mattis laoreet nibh, quis tincidunt odio fermentum vel. Nulla facilisi.</p>
         </div>
         
     </main>
