--- a/contacto.html
+++ b/contacto.html
@@ -40,7 +40,7 @@
 
         <h2>Llene el formulario de Contacto</h2>
 
-        <form class="formulario" action="src/database.php" method="post">
+        <form class="formulario" action="database.php" method="post">
         
             <fieldset>
                 <legend>Información Personal</legend>
