--- a/entrada.html
+++ b/entrada.html
@@ -47,9 +47,15 @@
 
 
         <div class="resumen-propiedad">
-            <p>Proin consequat viverra sapien, malesuada tempor tortor feugiat vitae. In dictum felis et nunc aliquet molestie. Proin tristique commodo felis, sed auctor elit auctor pulvinar. Nunc porta, nibh quis convallis sollicitudin, arcu nisl semper mi, vitae sagittis lorem dolor non risus. Vivamus accumsan maximus est, eu mollis mi. Proin id nisl vel odio semper hendrerit. Nunc porta in justo finibus tempor. Suspendisse lobortis dolor quis elit suscipit molestie. Sed condimentum, erat at tempor finibus, urna nisi fermentum est, a dignissim nisi libero vel est. Donec et imperdiet augue. Curabitur malesuada sodales congue. Suspendisse potenti. Ut sit amet convallis nisi.</p>
-
-            <p>Aliquam lectus magna, luctus vel gravida nec, iaculis ut augue. Praesent ac enim lorem. Quisque ac dignissim sem, non condimentum orci. Morbi a iaculis neque, ac euismod felis. Fusce augue quam, fermentum sed turpis nec, hendrerit dapibus ante. Cras mattis laoreet nibh, quis tincidunt odio fermentum vel. Nulla facilisi.</p>
+            <p>1. Busca la sencillez</p>
+            <p>-Siempre es más fácil acertar con el conjunto de la decoración de la casa, si el grueso, como los sofás las mesas y el aparador, son sencillos.</p>
+            <p>2. Elige un punto focal</p>
+            <p>-Ya que tengas determinado el uso de tu espacio será importante elegir un punto focal, este puede ser la televisión del centro de entretenimiento, la mesa de centro en una zona de convivencia o hasta una chimenea en una sala exterior.</p>
+            <p>3. Evita llenar demasiado la habitación</p>
+            <p>Sin importar si tienes un estilo minimalista o maximalista, siempre es recomendable que la sala no esté demasiado llena, especialmente la zona donde se relaja uno. Puedes experimentar con texturas y colores pero lo mejor es no exagerar con los cojines decorativos y dejar suficiente espacio</p>
+            <p>4. Aprovecha al máximo tus paredes</p>
+            <p>Las paredes son espacios que normalmente se olvidan y no se les saca provecho, así que no olvides las paredes de tu sala. Dependiendo de la distribución de esta habitación puedes montar paredes de galería, espejos, lámparas de pared y hasta repisas o mesas flotantes que sirvan para almacenamiento extra</p>
+            <p></p>
         </div>
         
     </main>
